<resources>

    <string name="app_name">Android App For Effectively Managing Election Procedures In Organizations</string>
    <string name="VERSION">Version 1.0</string>
    <string name="LOADING">Laoding..</string>
    <string name="SELECT_USER">Select User</string>
    <string name="ADMIN">Admin</string>
    <string name="USER">User</string>
    <string name="NEXT">Next</string>
    <string name="USERNAME">UserName</string>
    <string name="PASSWORD">Password</string>
    <string name="LOGIN">Login</string>
    <string name="APPROVE_USER">Approve User</string>
    <string name="ADD_ELECTION_DETAILS">Add Election Details</string>
    <string name="ADD_CANDIATE_DETAILS">Add Candidate Details</string>
    <string name="SEND_NOTIFICATION">Send Notification</string>
    <string name="VIEW_USERS">View Users</string>
    <string name="VIEW_ELECTION">View Election</string>
    <string name="VIEW_CANDIDATES">View Candidate</string>
    <string name="VIEW_FEEDBACK">View Feedback</string>
    <string name="VIEW_REPORTS">View Reports</string>
    <string name="PROFILE_PICTURE">Profile Picture</string>
    <string name="NAME">Name</string>
    <string name="ADDRESS">Address</string>
    <string name="CONTACT">Contact</string>
    <string name="MAIL">Mail</string>
    <string name="SHOW_NOTIFICATION">Show Notification</string>
    <string name="GIVE_FEEDBACK">Give Feedback</string>
    <string name="CAST_VOTE">Cast Vote</string>
    <string name="FEEDBACK_LIST">Feedback List</string>
    <string name="USERS_LIST">Users List</string>
    <string name="USER_DETAILS">User Details</string>
    <string name="AGE">Age</string>
    <string name="GENDER">Gender</string>
    <string name="APPROVE">Approve</string>
    <string name="FEEDBACK">Feedback</string>
    <string name="ENTER_FEEDBACK">Enter Feedback</string>
    <string name="SUBMIT">Submit</string>
    <string name="REGISTER">Register</string>
    <string name="HELP">Help</string>
    <string name="CHANGE_PASSWORD">Change Password</string>
    <string name="LOGOUT">Logout</string>
    <string name="ABOUT_US">About Us</string>
    <string name="CONFIRM_PASSWORD">Confirm Password</string>
    <string name="SIGNUP">SIGNUP</string>
    <string name="OLD_PASSWORD">Old Password</string>
    <string name="NEW_PASSWORD">New Password</string>
    <string name="CONFIRM_NEW_PASSWORD">Confirm New Password</string>
</resources>
