<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical"
    android:padding="20dp">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/REGISTER"
        android:layout_marginTop="20dp"
        android:textSize="40sp"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:layout_marginBottom="20dp"
        />
    <ImageView
        android:id="@+id/imageView7"
        android:layout_width="wrap_content"
        android:layout_height="150dp"
        android:src="@drawable/user"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:id="@+id/name"
            android:text="@string/NAME"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:id="@+id/address"
            android:text="@string/ADDRESS"
            />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:id="@+id/contact"
            android:text="@string/CONTACT"
             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:id="@+id/mail"
            android:text="@string/MAIL"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:id="@+id/userName"
            android:text="@string/USERNAME"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:id="@+id/password"
            android:text="@string/PASSWORD"
           />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#ffffff"
        android:id="@+id/cofirmPassword"
        android:text="@string/CONFIRM_PASSWORD"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="10dp"
        android:layout_margin="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="Photo:"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:textStyle="bold"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/PROFILE_PICTURE"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:textSize="18sp"
            android:textColorHint="#FFFFFF"
            android:textColor="#FFFFFF"
            android:onClick="selectPhoto"
            android:clickable="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            />
    </LinearLayout>



    <Button
        android:id="@+id/btn_submit"
        style="@style/ButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="50dp"
        android:background="@drawable/button_selector"
        android:onClick="SUBMIT"
        android:text="@string/SUBMIT"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>
</ScrollView>